testing/flint: update urls

--- a/testing/flint/APKBUILD
+++ b/testing/flint/APKBUILD
@@ -4,9 +4,9 @@
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=flint
 pkgver=2.9.0
-pkgrel=2
+pkgrel=3
 pkgdesc="C library in support of computations in number theory"
-url="https://www.flintlib.org/"
+url="https://flintlib.org/"
 # s390x: https://github.com/wbhart/flint2/issues/1184
 arch="all !s390x"
 license="LGPL-2.1-or-later"
@@ -20,7 +20,7 @@ makedepends="
 	samurai
 	"
 subpackages="$pkgname-dev"
-source="https://www.flintlib.org/flint-$pkgver.tar.gz
+source="https://flintlib.org/download/flint-$pkgver.tar.gz
 	fix-sdiv_qrnnd-test.patch
 	"
 
