testing/leptosfmt: upgrade to 0.1.33

--- a/testing/leptosfmt/APKBUILD
+++ b/testing/leptosfmt/APKBUILD
@@ -1,7 +1,8 @@
 # Contributor: Matthias Ahouansou <matthias@ahouansou.cz>
 # Maintainer: Matthias Ahouansou <matthias@ahouansou.cz>
 pkgname=leptosfmt
-pkgver=0.1.18
+pkgver=0.1.33
+_prettypleasegitrev=c7591dabc25f75d58fbedc0d7adff45804bf1b78
 pkgrel=0
 pkgdesc="A formatter for the leptos view! macro"
 url="https://github.com/bram209/leptosfmt"
@@ -13,11 +14,17 @@ makedepends="
 	cargo-auditable
 "
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/bram209/leptosfmt/archive/refs/tags/$pkgver.tar.gz"
+source="
+	$pkgname-$pkgver.tar.gz::https://github.com/bram209/leptosfmt/archive/refs/tags/$pkgver.tar.gz
+	prettyplease-$_prettypleasegitrev.tar.gz::https://github.com/bram209/prettyplease/archive/$_prettypleasegitrev.tar.gz
+"
 options="net"
 
 prepare() {
 	default_prepare
+
+	mv -T "$srcdir"/prettyplease-"$_prettypleasegitrev" "$builddir"/prettyplease
+
 	cargo fetch --target="$CTARGET" --locked
 }
 
@@ -32,12 +39,13 @@ check() {
 package() {
 	install -Dm 755 target/release/leptosfmt "$pkgdir"/usr/bin/leptosfmt
 
-	for l in -APACHE -MIT
+	for l in APACHE MIT
 	do
-		install -Dm 644 LICENSE"$l" "$pkgdir"/usr/share/licenses/"$pkgname"/LICENSE"$l"
+		install -Dm 644 LICENSE-"$l" "$pkgdir"/usr/share/licenses/"$pkgname"/LICENSE-"$l"
 	done
 }
 
 sha512sums="
-d060878e6c99899143ab8760fa15f618fc6cc99b06250a9c5feefceec64d8fba616c5f82e8533da52880a2f11e2e914c4eebd86b58948cb6ae4e0a4d17f6853a  leptosfmt-0.1.18.tar.gz
+944690bffd8acc2c8d4f3551a4b48fba5728e558dfbad975462f7631a48a85be909ce9d0ded5a77700db4432988e1f5bfd2d4fdbf8f33693584b272645f7c843  leptosfmt-0.1.33.tar.gz
+a535c0abbae7e1f3a9fa811cea12f71e185bb7d22632b6088e073579bc9890cb5179d0b24b67218c222affabd3c8116a351a1bb127b8fc0ccdc660a4075ca15f  prettyplease-c7591dabc25f75d58fbedc0d7adff45804bf1b78.tar.gz
 "
