testing/vlang: upgrade to 0.4.10

--- a/testing/vlang/APKBUILD
+++ b/testing/vlang/APKBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Jakob Meier <comcloudway@ccw.icu>
 
 pkgname=vlang
-pkgver=0.4.9
+pkgver=0.4.10
 # this has to be updated with the version
-_vc_commit_sha="27942c7ab5a12b9253eb69eaf3a58699bcdd5189"
+_vc_commit_sha="66ea39be2275ac723225b9ca99d51ec1212c640d"
 pkgrel=0
 pkgdesc="Simple, fast, safe, compiled language for developing maintainable software."
 url="https://vlang.io"
 arch="x86_64 aarch64 riscv64"
 license="MIT"
 # to be able to symlink /usr/lib/vlang/thirdparty/tcc/lib/libgc.a to /usr/lib/libgc.a
-depends="gc-dev"
-makedepends="gcc gc-dev libx11-dev"
+depends="gc-static"
+makedepends="gcc gc-static libx11-dev"
 source="
 v-$pkgver.tar.gz::https://github.com/vlang/v/archive/refs/tags/$pkgver.tar.gz
 vc-$pkgver.tar.gz::https://github.com/vlang/vc/archive/$_vc_commit_sha.tar.gz
@@ -56,6 +56,6 @@ package() {
 	touch $pkgdir/usr/lib/vlang/cmd/tools/.disable_autorecompilation
 }
 sha512sums="
-569460564cd60b6a3b0e346a86ebad4f52775d2096300875c41b01e65c28dc83f7bb0919038be44f242d1523591e0d8ca328916e41d71e24aea26e87114cbee1  v-0.4.9.tar.gz
-5e664f933eeda23431c5a46b1e050933a713a1feddc90fcccb0dbba4fd15e82cff049de89cc58459f238d1abb670ba76a937794055f6ad6ef331563eb1915049  vc-0.4.9.tar.gz
+02b355fd5e9cb6df8a2a60744b335b7932d3937c6244df6a249f79c82c0b6377ef6c2b21a9f8078277b99de1f1356ca06a36129770ab3b6880b2b32a9dd1499a  v-0.4.10.tar.gz
+6f31789a8ef5e9d29f3ba745d363eefc8d9aa013beebb0c817eb089879413d033097541730ebbcb102a456f444539baa818ad81de8dc3b16e96e1710082c8275  vc-0.4.10.tar.gz
 "
