--- a/testing/cbqn/APKBUILD
+++ b/testing/cbqn/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Siva Mahadevan <me@svmhdvn.name>
 pkgname=cbqn
-pkgver=0.8.0
+pkgver=0.9.0
 pkgrel=0
 pkgdesc="BQN implementation in C"
 url="https://github.com/dzaima/CBQN"
@@ -8,9 +8,9 @@ arch="all !armhf !armv7 !s390x" # CBQN fails to compile on these archs
 makedepends="bash libffi-dev"
 license="LGPL-3.0-only OR GPL-3.0-only OR MPL-2.0"
 options="!check" # TODO Testsuite requires fetching mlochbaum/BQN
-_singeli_ver=b43f3999b0c5a40b43ceee258fbe6bb8245d06af
+_singeli_ver=53f42ce4331176d281fa577408ec5a652bdd9127
 _replxx_ver=13f7b60f4f79c2f14f352a76d94860bad0fc7ce9
-_cbqn_bytecode_ver=c7d83937710889591bad3525077afc30a21e5148
+_cbqn_bytecode_ver=0bdfb86d438a970b983afbca93011ebd92152b88
 source="$pkgname-$pkgver.tar.gz::https://github.com/dzaima/CBQN/archive/v$pkgver.tar.gz
 	Singeli-$_singeli_ver.tar.gz::https://github.com/mlochbaum/Singeli/archive/$_singeli_ver.tar.gz
 	replxx-$_replxx_ver.tar.gz::https://github.com/dzaima/replxx/archive/$_replxx_ver.tar.gz
@@ -26,7 +26,7 @@ prepare() {
 }
 
 build() {
-	make version="$pkgver" notui=1
+	make version="$pkgver" notui=1 nogit=1
 }
 
 package() {
@@ -34,8 +34,8 @@ package() {
 }
 
 sha512sums="
-d1d03a4591f39534c7f022bd97b6a46cea9e74b8abcd6d8c87b1321ffc3c26ca76f88671fb20d19a2f1bdf14b43b9105088d12a0da1ea9e766c87a5d43f03c4b  cbqn-0.8.0.tar.gz
-440b6eec16bead8fe04f3a72b29dd8ae91b84ba40f3929da2c25ca4d78d7e916781dc2506d1eb22309fb211396a5675b1a1869d2a0eeb02c0a9070e2cf538853  Singeli-b43f3999b0c5a40b43ceee258fbe6bb8245d06af.tar.gz
+4dba615582ccc565c67e14fb1c89d33cf1ec6f2952c57e4c4e514cb1232901e83d63de5e73a9ae912d52b0052db4c3c5951cd4af2b3598652a1c7933e1ba7d5b  cbqn-0.9.0.tar.gz
+645ee0bfc0c1228939d6659da34e9bd8f3ed98e74ec1286fbeae15f7dacb5284d7b4b9344c57fd806b5e491bcda2637d6ded4c5688c7625426331cc249ca0fa0  Singeli-53f42ce4331176d281fa577408ec5a652bdd9127.tar.gz
 13171b41d3570e5956ae14edd7f83b1d61af39695387419877cf43f3fdc9733787c2e57b4a19605aadfdcbd89a2b97c82824a47f7dc89994ab27bece1ce4f90e  replxx-13f7b60f4f79c2f14f352a76d94860bad0fc7ce9.tar.gz
-667c143801298e3d5f8fdecced28b8be1061787932dbed0c3cd2085b649a0ee61348ca87c60385d4dfbf5c0300e5a710f3f19cf4043de0c3c41e24dd4041bc28  cbqnBytecode-c7d83937710889591bad3525077afc30a21e5148.tar.gz
+7d23eafbfe98a05b1412e6ced9716281e92eef61e78c9d5a6e860fdb37bb22314cd662ddc2665edf23d53e20884d3f0b68d4cee77ace8bc989fff95d73410d37  cbqnBytecode-0bdfb86d438a970b983afbca93011ebd92152b88.tar.gz
 "
