community/edbrowse: upgrade to 3.8.11

--- a/community/edbrowse/APKBUILD
+++ b/community/edbrowse/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=edbrowse
-pkgver=3.8.10
+pkgver=3.8.11
 pkgrel=0
 pkgdesc="Line-oriented editor, web browser, and mail client"
 url="https://edbrowse.org/"
@@ -43,10 +43,10 @@ package() {
 		"$pkgdir"/usr/share/man/man1/edbrowse.1
 	install -Dvm644 doc/sample.ebrc README \
 		-t "$pkgdir"/usr/share/doc/$pkgname/
-	install -Dvm644 COPYING \
+	install -Dvm644 LICENSE \
 		-t "$pkgdir"/usr/share/licenses/$pkgname/
 }
 
 sha512sums="
-7fee22f316ed01135cf52e83868759a6d977effba5e3d78fbd8e19d6a5407bef43f13d618ff553dfe62c50ea3f3707eae1cb9284181e8f904b47316e4b5745a4  edbrowse-3.8.10.tar.gz
+b2eaae7b6b86c87e734a881b630cbcd310dc6612076410a321616060e8b6d22b8b02106ce3ce8a1f0e91882cec71c34bf8c5c97c07364e74b1c0c006f8b54152  edbrowse-3.8.11.tar.gz
 "
