testing/gperftools: enable aarch64

--- a/testing/gperftools/APKBUILD
+++ b/testing/gperftools/APKBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Alex Denes <caskd@redxen.eu>
 pkgname=gperftools
 pkgver=2.16
-pkgrel=0
+pkgrel=1
 pkgdesc="Fast, multi-threaded malloc and nifty performance analysis tools"
 url="https://github.com/gperftools/gperftools"
 # everything else fails even more tests or isn't supported
-arch="x86_64"
+arch="x86_64 aarch64"
 license="BSD-3-Clause"
 makedepends="
 	autoconf
