community/mpv: upgrade to 0.40.0
https://github.com/mpv-player/mpv/releases/tag/v0.40.0

--- a/community/mpv/APKBUILD
+++ b/community/mpv/APKBUILD
@@ -3,13 +3,8 @@
 # Contributor: Jakub Skrzypnik <j.skrzypnik@openmailbox.org>
 # Maintainer: Alex McGrath <amk@amk.ie>
 pkgname=mpv
-# intentionally git, see
-# https://github.com/mpv-player/mpv#release-cycle
-# the stable releases are just arbitrary git, so we can update more often.
-# it's the same stability policy regardless
-pkgver=0.39.0
-pkgrel=1
-_gitrev=a0fba7be57f3822d967b04f0f6b6d6341e7516e7
+pkgver=0.40.0
+pkgrel=0
 pkgdesc="Video player based on MPlayer/mplayer2"
 url="https://mpv.io/"
 license="GPL-2.0-or-later"
@@ -24,6 +19,7 @@ makedepends="
 	libbluray-dev
 	libcaca-dev
 	libcdio-paranoia-dev
+	libdisplay-info-dev
 	libdvdnav-dev
 	libplacebo-dev
 	libsixel-dev
@@ -57,12 +53,12 @@ subpackages="
 	$pkgname-libs
 	$pkgname-dev
 	$pkgname-bash-completion
+	$pkgname-fish-completion
 	$pkgname-zsh-completion
 	umpv::noarch
 	"
-source="https://github.com/mpv-player/mpv/archive/$_gitrev/mpv-$_gitrev.tar.gz
+source="https://github.com/mpv-player/mpv/archive/v$pkgver/mpv-v$pkgver.tar.gz
 meson-libcaca-version.patch"
-builddir="$srcdir/mpv-$_gitrev"
 
 case "$CARCH" in
 ppc64le|riscv64|loongarch64)
@@ -85,34 +81,36 @@ esac
 prepare() {
 	default_prepare
 
-	echo "${pkgver%_git*}-$_gitrev" > VERSION
+	echo "$pkgver" > VERSION
 }
 
 build() {
 	CFLAGS="$CFLAGS -O2" \
 	CXXFLAGS="$CXXFLAGS -O2" \
 	abuild-meson \
-		-Db_lto=true \
 		-Dalsa=enabled \
+		-Db_lto=true \
 		-Dbuild-date=false \
 		-Dcaca=enabled \
 		-Dcdda=enabled \
+		-Ddrm=enabled \
 		-Ddvdnav=enabled \
 		-Degl-drm=enabled \
+		-Degl=enabled \
 		-Degl-wayland=enabled \
 		-Degl-x11=enabled \
-		-Degl=enabled \
+		-Dgbm=enabled \
 		-Dgl=enabled \
 		-Djack=enabled \
 		-Dlibmpv=true \
 		-Dpulse=enabled \
+		-Dsixel=enabled \
 		-Dsndio=enabled \
 		-Dtests="$(want_check && echo true || echo false)" \
 		-Duchardet=enabled \
 		-Dvdpau=disabled \
 		-Dvulkan=enabled \
 		-Dx11=enabled \
-		-Dsixel=enabled \
 		. output
 
 	meson compile -C output
@@ -143,6 +141,6 @@ umpv() {
 }
 
 sha512sums="
-4f9b70abd1a6e09da211f219e922ceb7c07be3320b3ded866daa8e7a1b15d0c0da02feaada00d8315772f9eeb2f46f1d04396c9926866686b74a254f13d0baf6  mpv-a0fba7be57f3822d967b04f0f6b6d6341e7516e7.tar.gz
+24ccbff7fa34f85c033dc9ed94a364c6226e1081a47086365fc98e332af2004517dede371a005f1d51c2a3306b7dc915df9de4188cea140b1fd988058bbd6e8c  mpv-v0.40.0.tar.gz
 4ff107b15c7d124a22547f73b10fa7cbaf247be27717474d875fa5db9652ae3b19b6801a069b066eb9566e66a4882257e09b9424f9fe95a477bd2deffa72c890  meson-libcaca-version.patch
 "
