community/py3-jellyfin-apiclient-python: upgrade to 1.11.0

--- a/community/py3-jellyfin-apiclient-python/APKBUILD
+++ b/community/py3-jellyfin-apiclient-python/APKBUILD
@@ -1,8 +1,7 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-# Maintainer: Bart Ribbers <bribbers@disroot.org>
+maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=py3-jellyfin-apiclient-python
-pkgver=1.9.2
-pkgrel=4
+pkgver=1.11.0
+pkgrel=0
 pkgdesc="Python API client for Jellyfin"
 url="https://github.com/jellyfin/jellyfin-apiclient-python"
 arch="noarch"
@@ -11,22 +10,28 @@ depends="
 	py3-requests
 	py3-urllib3
 	py3-websocket-client
-	python3
 	"
-makedepends="py3-setuptools"
+makedepends="
+	py3-gpep517
+	py3-setuptools
+	py3-wheel
+	"
 subpackages="$pkgname-pyc"
-source="https://pypi.python.org/packages/source/j/jellyfin-apiclient-python/jellyfin-apiclient-python-$pkgver.tar.gz"
+source="https://pypi.python.org/packages/source/j/jellyfin_apiclient_python/jellyfin_apiclient_python-$pkgver.tar.gz"
 options="!check" # No tests
-builddir="$srcdir/jellyfin-apiclient-python-$pkgver"
+builddir="$srcdir/jellyfin_apiclient_python-$pkgver"
 
 build() {
-	python3 setup.py build
+	gpep517 build-wheel \
+		--wheel-dir .dist \
+		--output-fd 3 3>&1 >&2
 }
 
 package() {
-	python3 setup.py install --skip-build --root="$pkgdir"
+	python3 -m installer -d "$pkgdir" \
+		.dist/*.whl
 }
 
 sha512sums="
-e7e5805abc78885311ada504e45ee9e6dba4bdea2d09dc2a3d38016de890a9b0cc346d9948161e3ab1b96075ce19e66c2be9ea8a367650d551a53ca1d7ae209b  jellyfin-apiclient-python-1.9.2.tar.gz
+61dea85a3a66bd7660a26c10f2e321d58d96e7e1255474af4448a89728e4f3740a9176912b6b958f7f895ffab296973f010bd02e9466b23667e3665a012daedd  jellyfin_apiclient_python-1.11.0.tar.gz
 "
