community/fwupd: upgrade to 2.0.7
https://github.com/fwupd/fwupd/releases/tag/2.0.7

--- a/community/fwupd/APKBUILD
+++ b/community/fwupd/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Timo Teräs <timo.teras@iki.fi>
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=fwupd
-pkgver=2.0.6
-pkgrel=1
+pkgver=2.0.7
+pkgrel=0
 pkgdesc="Firmware update daemon"
 url="https://fwupd.org/"
 # armhf, ppc64le and s390x blocked by gnu-efi/fwupd-efi
@@ -11,6 +11,7 @@ license="LGPL-2.1-or-later"
 depends="dbus hwdata-usb"
 makedepends="
 	cairo-dev
+	curl-dev
 	efivar-dev
 	elfutils-dev
 	elogind-dev
@@ -69,7 +70,7 @@ subpackages="
 source="https://github.com/fwupd/fwupd/releases/download/$pkgver/fwupd-$pkgver.tar.xz
 	$pkgname.initd
 	$pkgname.confd
-	pango-1.56.2.patch
+	elogind.patch
 	"
 
 # libsmbios is a library for DELL devices which are x86/x86_64-only
@@ -84,12 +85,9 @@ case "$CARCH" in
 	x86*|aarch64)
 		# fwupd-efi needed for uefi-capsule
 		makedepends="$makedepends fwupd-efi-dev"
-		_uefi_capsule=enabled
 		subpackages="$subpackages $pkgname-grub"
 		;;
-	*)
-		_uefi_capsule=disabled
-		;;
+	*)	;;
 esac
 
 build() {
@@ -100,8 +98,6 @@ build() {
 		-Dhsi=enabled \
 		-Dlvfs=true \
 		-Dman=true \
-		-Dplugin_redfish=disabled \
-		-Dplugin_uefi_capsule=$_uefi_capsule \
 		-Dsystemd=disabled \
 		-Delogind=enabled \
 		-Dtests=true \
@@ -150,8 +146,8 @@ tests() {
 }
 
 sha512sums="
-44ad50ea0f3072dcb4fd204bd406fa2933705d77f6647c5dc917f74534d7218918ba8a174dab2319528905421bbe2e192a86a397fc5e336d2f15213fb96d8b32  fwupd-2.0.6.tar.xz
+138d21a837910d8e257e028e19fbc33b2f6e44476562aa82cefa864d4456ace01add36efcd47235e20f9fd8f919b44d4b906aa6c71ce17b17d378bdb405675d3  fwupd-2.0.7.tar.xz
 2c34891ec273aa1a4d105602cd5e99add5a17d6e240fa93a015d5bb2e11e54937b04781de2a854c472be376524b50fc5bb48edf7b875afb54e3ca07dcda117b0  fwupd.initd
 0bf773a2c52b0306e99e5192d259f38cce8a25487e95a41b6e0200a1ed629235971795a1f9ba12a633cd902671d888610695658f2cc2c750e2afca70f87ee589  fwupd.confd
-c80f912122c4ec955961260a091b6f8d3162ba44e211e5a8ddb804977e5245592c95b05888040df4afa74c875b2ab0f08d6dd824429c85f7caf2348c3274c6bd  pango-1.56.2.patch
+3c8f4d9fb4808a4561933c61c74e9da6572fced66b69c3fe184a0a7b430acd045fac85c57c91d20da1d01c33a9be4aea20c115821bdd5207174f7b872ab15347  elogind.patch
 "
