main/lld*: add explicit replaces= on doc function

--- a/main/lld20/APKBUILD
+++ b/main/lld20/APKBUILD
@@ -43,6 +43,8 @@ if [ "$_default_lld" = yes ]; then
 	replaces="lld"
 fi
 
+replaces="lld$_prevllvmver"
+
 prepare() {
 	default_prepare
 	mv "$srcdir"/cmake-${pkgver//_/}.src "$srcdir"/cmake
@@ -75,6 +77,11 @@ package() {
 	# we have the scudo allocator available, so link lld to it to
 	# significantly improve performance, especially in LTO contexts
 	patchelf --add-needed libscudo.so "$pkgdir"/usr/bin/lld
+}
+
+doc() {
+	default_doc
+	replaces="lld-doc lld$_prevllvmver-doc"
 }
 
 sha512sums="
