--- a/main/lld19/APKBUILD
+++ b/main/lld19/APKBUILD
@@ -3,8 +3,9 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgver=19.1.7
-pkgrel=1
+pkgrel=2
 _llvmver=${pkgver%%.*}
+_prevllvmver=$((_llvmver - 1))
 pkgname=lld$_llvmver
 pkgdesc="The LLVM Linker"
 url="https://llvm.org/"
@@ -42,6 +43,8 @@ if [ "$_default_lld" = yes ]; then
 	replaces="lld"
 fi
 
+replaces="lld$_prevllvmver"
+
 prepare() {
 	default_prepare
 	mv "$srcdir"/cmake-${pkgver//_/}.src "$srcdir"/cmake
@@ -74,6 +77,11 @@ package() {
 	# we have the scudo allocator available, so link lld to it to
 	# significantly improve performance, especially in LTO contexts
 	patchelf --add-needed libscudo.so "$pkgdir"/usr/bin/lld
+}
+
+doc() {
+	default_doc
+	replaces="lld-doc lld$_prevllvmver-doc"
 }
 
 sha512sums="
