--- a/community/firefox/APKBUILD
+++ b/community/firefox/APKBUILD
@@ -2,15 +2,14 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=firefox
-pkgver=136.0
-_releasedate=2025-03-04
+pkgver=136.0.3
+_releasedate=2025-03-25
 pkgrel=0
 pkgdesc="Firefox web browser"
 url="https://www.firefox.com/"
 # s390x blocked by lld
 # armhf: https://bugzilla.mozilla.org/show_bug.cgi?id=1680495
-# riscv64: vpx symbol is missing #15412
-arch="x86_64 armv7 aarch64 x86 ppc64le loongarch64"
+arch="all !s390x !armhf"
 license="GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MPL-2.0"
 # ffmpeg 6 -> 112
 depends="
@@ -703,7 +702,7 @@ intl() {
 }
 
 sha512sums="
-a2b7e74e8404138b294f7b3c5f1eaeaeb8ce84c9aad25379e8ec785a9686f42def9f8c119d4bc276dd371d13d7bebbe4b1b092af41500aa8c2b2c827971445b4  firefox-136.0.tar.xz
+59cb54bc946aecea810169970aad4ba3f7b3092e56f15f86ff3d51fa2752c89632a057a1bda016f0005665ec5099d9b9f9a4786b9c02e3f5656eb2003b6a1747  firefox-136.0.3.tar.xz
 616169325dc7715d3ff558c1846394d992f1a0a9427af5339e84abf3d9e7d85a5f9f6bae218ee3416ef39769a56150ac35881435ac09b976876fd556fddeac38  abseil-cpp.patch
 32c566a1529d36b4816cef80bb56f0723d0ec2e407e5e4a61cd278d40dafa3a3032d5a77497f191989f4954fa3ee539845dd170a596e0b22c6ef5b337405a72e  bmo-1952657-no-execinfo.patch
 19eea840aa9c1c21e7bd1f832ec078989fe6f08fca40baa271be7e74f1cffeb5ab8d3218a93e664b8d90a41506dede524e2a5174cd47580866109bc6711ea969  fix-fortify-system-wrappers.patch
