community/kde-applications: enable on loongarch64

--- a/community/kdepim-addons/APKBUILD
+++ b/community/kdepim-addons/APKBUILD
@@ -3,11 +3,10 @@
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kdepim-addons
 pkgver=24.12.3
-pkgrel=0
+pkgrel=1
 # armhf blocked by qt6-qtdeclarative
 # armv7, ppc64le, s390x and riscv64 blocked by qt6-qtwebengine
-# loongarch64 blocked by pimcommon
-arch="all !armhf !armv7 !ppc64le !s390x !riscv64 !loongarch64"
+arch="all !armhf !armv7 !ppc64le !s390x !riscv64"
 url="https://kontact.kde.org/"
 pkgdesc="Addons for KDE PIM applications"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later"
@@ -65,7 +64,8 @@ checkdepends="
 	"
 subpackages="$pkgname-lang"
 _repo_url="https://invent.kde.org/pim/kdepim-addons.git"
-source="https://download.kde.org/stable/release-service/$pkgver/src/kdepim-addons-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kdepim-addons-$pkgver.tar.xz
+	update-libc.patch"
 # net required to download Rust crates
 # tests are broken and hang
 options="!check net"
@@ -89,4 +89,5 @@ package() {
 
 sha512sums="
 d4a745cadc65ac37e1f96eaaf7ac1ed292f824ce438ae700b5292b1169a85e3d8f95627598a27ba5d458bceff1c718a0fa6dfccc83e7eadfb54c2ff6873f36c8  kdepim-addons-24.12.3.tar.xz
+65ad29e9c901b03591f761c32b35a5a85295b009ca3ab879df5db390269d13da6f1afd83f7623326cdbab96d737c2ba231d327f688a3779263e15bdab268a06b  update-libc.patch
 "
