--- a/community/korganizer/APKBUILD
+++ b/community/korganizer/APKBUILD
@@ -6,8 +6,7 @@ pkgver=24.12.3
 pkgrel=0
 # armhf blocked by qt6-qtdeclarative
 # ppc64le, s390x, riscv64 and armv7 blocked by qt6-qtwebengine -> kmailtransport
-# loongarch64 blocked by pimcommon
-arch="all !armhf !ppc64le !s390x !riscv64 !armv7 !loongarch64"
+arch="all !armhf !ppc64le !s390x !riscv64 !armv7"
 url="https://apps.kde.org/korganizer/"
 pkgdesc="The calendar and scheduling component of Kontact"
 license="GPL-2.0-or-later"
