--- a/community/akonadi-calendar/APKBUILD
+++ b/community/akonadi-calendar/APKBUILD
@@ -8,8 +8,7 @@ pkgver=24.12.3
 pkgrel=0
 pkgdesc="Akonadi calendar integration"
 # ppc64le, s390x, riscv64, armhf, armv7 blocked by kmailtransport -> libkgapi -> qt6-qtwebengine
-# loongarch64 blocked by messagelib
-arch="all !armhf !ppc64le !s390x !riscv64 !armv7 !loongarch64"
+arch="all !armhf !ppc64le !s390x !riscv64 !armv7"
 url="https://community.kde.org/KDE_PIM"
 license="LGPL-2.0-or-later"
 depends_dev="
