--- a/community/akonadi-import-wizard/APKBUILD
+++ b/community/akonadi-import-wizard/APKBUILD
@@ -6,8 +6,8 @@ maintainer="team/kde <bribbers@disroot.org>"
 pkgname=akonadi-import-wizard
 pkgver=24.12.3
 pkgrel=0
-# ppc64le, s390x, riscv64, armhf, armv7 and loongarch64 blocked by qt6-qtwebengine -> libkgapi -> kmailtransport
-arch="all !armhf !ppc64le !s390x !riscv64 !armv7 !loongarch64"
+# ppc64le, s390x, riscv64, armhf and armv7 blocked by qt6-qtwebengine -> libkgapi -> kmailtransport
+arch="all !armhf !ppc64le !s390x !riscv64 !armv7"
 url="https://kontact.kde.org/"
 pkgdesc="Import data from other mail clients to KMail"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later AND GFDL-1.2-only"
