--- a/community/akregator/APKBUILD
+++ b/community/akregator/APKBUILD
@@ -8,8 +8,7 @@ pkgver=24.12.3
 pkgrel=0
 # armhf blocked by extra-cmake-modules
 # armv7, ppc64le, s390x and riscv64 blocked by qt6-qtwebengine
-# loongarch64 blocked by pimcommon
-arch="all !armhf !armv7 !ppc64le !s390x !riscv64 !loongarch64"
+arch="all !armhf !armv7 !ppc64le !s390x !riscv64"
 url="https://apps.kde.org/akregator/"
 pkgdesc="RSS Feed Reader"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later"
