--- a/community/kalarm/APKBUILD
+++ b/community/kalarm/APKBUILD
@@ -10,8 +10,7 @@ pkgdesc="Personal alarm scheduler"
 url="https://kontact.kde.org/"
 # armhf blocked by extra-cmake-modules
 # ppc64le, s390x, riscv64 and armv7 blocked by qt6-qtwebengine -> akonadi
-# loongarch64 blocked by pimcommon
-arch="all !armhf !ppc64le !s390x !riscv64 !armv7 !loongarch64"
+arch="all !armhf !ppc64le !s390x !riscv64 !armv7"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
 depends="kdepim-runtime"
 makedepends="
