--- a/community/kmail-account-wizard/APKBUILD
+++ b/community/kmail-account-wizard/APKBUILD
@@ -8,8 +8,7 @@ pkgver=24.12.3
 pkgrel=0
 # armhf blocked by extra-cmake-modules
 # ppc64le, s390x, riscv64 and armv7 blocked by qt6-qtwebengine -> kmailtransport
-# loongarch64 blocked by pimcommon
-arch="all !armhf !ppc64le !s390x !riscv64 !armv7 !loongarch64"
+arch="all !armhf !ppc64le !s390x !riscv64 !armv7"
 url="https://kontact.kde.org/"
 pkgdesc="KMail account wizard"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later AND GFDL-1.2-only"
