--- a/community/kontact/APKBUILD
+++ b/community/kontact/APKBUILD
@@ -7,8 +7,8 @@ pkgname=kontact
 pkgver=24.12.3
 pkgrel=0
 # armhf blocked by extra-cmake-modules
-# armv7, ppc64le, s390x, riscv64 and loongarch64 blocked by qt6-qtwebengine -> akonadi
-arch="all !armv7 !armhf !ppc64le !s390x !riscv64 !loongarch64"
+# armv7, ppc64le, s390x and riscv64 blocked by qt6-qtwebengine -> akonadi
+arch="all !armv7 !armhf !ppc64le !s390x !riscv64"
 url="https://kontact.kde.org/"
 pkgdesc="Container application to unify several major PIM applications within one application"
 license="GPL-2.0-or-later"
