--- a/community/libksieve/APKBUILD
+++ b/community/libksieve/APKBUILD
@@ -9,8 +9,7 @@ pkgrel=0
 pkgdesc="KDE PIM library for managing sieves"
 # armhf blocked by extra-cmake-modules
 # armv7, ppc64le, s390x and riscv64 blocked by qt6-qtwebengine
-# loongarch64 blocked by pimcommon
-arch="all !armv7 !armhf !ppc64le !s390x !riscv64 !loongarch64"
+arch="all !armv7 !armhf !ppc64le !s390x !riscv64"
 url="https://kontact.kde.org/"
 license="GPL-2.0-only"
 depends_dev="
