--- a/community/messagelib/APKBUILD
+++ b/community/messagelib/APKBUILD
@@ -7,8 +7,7 @@ pkgrel=0
 pkgdesc="KDE PIM messaging library"
 # armhf blocked by qt6-qtdeclarative
 # armv7, ppc64le, s390x, riscv64 blocked by qt6-qtwebengine
-# loongarch64 blocked by pimcommon
-arch="all !armv7 !armhf !ppc64le !s390x !riscv64 !loongarch64"
+arch="all !armv7 !armhf !ppc64le !s390x !riscv64"
 url="https://kontact.kde.org/"
 license="LGPL-2.0-only OR LGPL-3.0-only AND GPL-2.0-or-later"
 depends_dev="
@@ -109,6 +108,9 @@ check() {
 		"
 	case "$CARCH" in
 		x86) tests="$tests webengineviewer-webengineexportpdfpagejobtest" ;;
+	esac
+	case "$CARCH" in
+		loongarch64) skipped_tests="$skipped_tests akonadi-mysql-viewergrantleethemesupporttest" ;;
 	esac
 	for test in $tests; do
 		skipped_tests="$skipped_tests|$test"
