community/gnome-sudoku: upgrade to 48.0

--- a/community/gnome-sudoku/APKBUILD
+++ b/community/gnome-sudoku/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Erwan Rouchet <lucidiot@brainshit.fr>
 # Maintainer: Erwan Rouchet <lucidiot@brainshit.fr>
 pkgname=gnome-sudoku
-pkgver=47.1.1
+pkgver=48.0
 pkgrel=0
 arch="all"
 url="https://wiki.gnome.org/Apps/Sudoku"
 pkgdesc="Test your logic skills in this number grid puzzle"
 license="GPL-3.0-or-later"
-makedepends="yelp-tools vala meson libgee-dev libadwaita-dev gtk4.0-dev json-glib-dev qqwing-dev itstool desktop-file-utils"
+makedepends="yelp-tools vala meson libgee-dev libadwaita-dev gtk4.0-dev json-glib-dev qqwing-dev itstool desktop-file-utils blueprint-compiler"
 source="https://download.gnome.org/sources/gnome-sudoku/${pkgver%%.*}/gnome-sudoku-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
@@ -25,5 +25,5 @@ package() {
 }
 
 sha512sums="
-864d6838f0842c9be946ec6ed43d0c76d00c3b579952097f88aaca5d94cff5211c65d8a67c09bdb65cc0ff0f37be304077745afa0db64d299f2f61d0580b46cc  gnome-sudoku-47.1.1.tar.xz
+b51415181e29a874660f6f8cf578789a5f3482618b8f1aae7daf785ce3e6a47bc85885c422bc9fdd691aabc82a77425b644cb4c4911560dee89153ac53063aea  gnome-sudoku-48.0.tar.xz
 "
