community/py3-expandvars: upgrade to 1.0.0

--- a/community/py3-expandvars/APKBUILD
+++ b/community/py3-expandvars/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=py3-expandvars
-pkgver=0.12.0
-pkgrel=1
+pkgver=1.0.0
+pkgrel=0
 pkgdesc="Expand system variables Unix style"
 url="https://pypi.org/project/expandvars/"
 arch="noarch"
@@ -10,7 +10,7 @@ license="MIT"
 makedepends="py3-gpep517 py3-hatchling"
 checkdepends="py3-pytest"
 subpackages="$pkgname-pyc"
-source="https://github.com/sayanarijit/expandvars/archive/v$pkgver/py3-expandvars-$pkgver.tar.gz"
+source="https://files.pythonhosted.org/packages/source/e/expandvars/expandvars-$pkgver.tar.gz"
 builddir="$srcdir/expandvars-$pkgver"
 
 build() {
@@ -31,5 +31,5 @@ package() {
 }
 
 sha512sums="
-1bf3688065212e988e2cad93402c17def8636a621562bf1689af48a6e526243bfb7bcfab9f21cd1a69e70909eb823fdf4002cb0b3b314cf7c9f3171ce0a1ca90  py3-expandvars-0.12.0.tar.gz
+06aacf831973386fe4a366477eefa93f9118ed0cb66822b7bca719eb688850e9803cf34a109ee51daa6147352a3b86da87667ba5d6018615778feabbcfaf3c6b  expandvars-1.0.0.tar.gz
 "
