community/chromium: build with bundled icu
does not build with system icu 76

--- a/community/chromium/APKBUILD
+++ b/community/chromium/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: lauren n. liberda <lauren@selfisekai.rocks>
 pkgname=chromium
 pkgver=134.0.6998.117
-pkgrel=0
+pkgrel=1
 _copium_tag=134.0
 # DEPS file -> deps['src/third_party/test_fonts']['objects'][0]['object_name']
 # (for the given version, when it changes)
@@ -533,6 +533,7 @@ prepare() {
 	# libaom - https://aomedia.googlesource.com/aom/+/706ee36dcc82%5E%21/
 	#   but watch this space: https://aomedia-review.googlesource.com/c/aom/+/188606
 	# jsoncpp, re2, snappy, swiftshader-*, woff2 - requires use_custom_libcxx=false
+	# icu 76 does not build - https://bugs.gentoo.org/943216
 	local use_system="
 		brotli
 		crc32c
@@ -543,7 +544,6 @@ prepare() {
 		fontconfig
 		freetype
 		harfbuzz-ng
-		icu
 		libdrm
 		libjpeg
 		libsecret
