testing/php81: fix build with ICU 76

--- a/testing/php81/APKBUILD
+++ b/testing/php81/APKBUILD
@@ -121,6 +121,8 @@ source="$_pkgreal-$pkgver.tar.xz::https://php.net/distributions/$_pkgreal-$pkgve
 	fix-icu74.patch
 	loongarch64-support-for-fibers.patch
 	fix-pear.patch
+	ext-intl-level-up-c++-runtime-std-for-icu.patch
+	Adapt-ext-intl-tests-for-ICU-75.1-and-76.1.patch
 	"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
@@ -691,4 +693,6 @@ f43ab399c3b4a2b9a3a329acd32d9cbc690cad697dd0a0e87f3d654028b88af7dd1cd80cbf970c6f
 16d283ac2373442f2fbbca4968df92e0114454c7645a797f1f04af27e546293f3312d45aef049357057facd4fb62339ebfe7f59e65d4278910c4195d873955d1  fix-icu74.patch
 517441fdf14b7855b1843bd0d1c86126017af7a340fbf7177202db7c9e67912332abdb62e7477f45e7922c910672396ba4f953eb7dc052ed06624c682bd12791  loongarch64-support-for-fibers.patch
 39b8a84098db50d76cac51438b869cc9c4f88881948bc0bac590f811889f6ca974b31153561a22642810d81ccb92d301580032d08fe911472b3f0350eae84450  fix-pear.patch
+6050fe5d7c2095face8048f049060a8dc8eb6b7ba462db4590542f9e6ffab54ab3106ed6c091542252c0aa8edfe8a55a7f7ccc186c56ee672eaeeea5ed8dc87c  ext-intl-level-up-c++-runtime-std-for-icu.patch
+7e5f052119197d6056d5e57c864e614674727077f222d5e538a026c8f2997b2ecd78cd655a23c1d727360c386995fef84b9c64bf43780fcc092df59543c41580  Adapt-ext-intl-tests-for-ICU-75.1-and-76.1.patch
 "
