community/kasts: backport upstream recommended patch to fix compatibility with latest Kirigami

--- a/community/kasts/APKBUILD
+++ b/community/kasts/APKBUILD
@@ -3,7 +3,7 @@
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kasts
 pkgver=24.12.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Kirigami-based podcast player"
 # armhf blocked by qt6-qtdeclarative
 arch="all !armhf"
@@ -41,7 +41,9 @@ makedepends="
 	"
 subpackages="$pkgname-lang"
 _repo_url="https://invent.kde.org/multimedia/kasts.git"
-source="https://download.kde.org/stable/release-service/$pkgver/src/kasts-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kasts-$pkgver.tar.xz
+	0001-kasts-Fix-dialog-boxes-after-recent-Kirigami-updates.patch
+	"
 options="!check" # No tests
 
 build() {
@@ -58,4 +60,5 @@ package() {
 
 sha512sums="
 135105b92a744d5a1bf8b6dd159c1782e5f89974e1e12d56fa9d29f1c5c531e6c7622a67a3f819baa0a12acafa61e5bad42dad6af0239f2a4c8fcc63039d30c8  kasts-24.12.3.tar.xz
+503cb41ce397dc77b91cf834666da4feed32cb1f0daa158fbd29a70c234787e7aa8592fb2608de53c614fb8e42a12ced4e7133d3c854d5ff291a06df9ff1ba40  0001-kasts-Fix-dialog-boxes-after-recent-Kirigami-updates.patch
 "
