community/kclock: backport upstream recommended patch to fix compatibility with latest Kirigami

--- a/community/kclock/APKBUILD
+++ b/community/kclock/APKBUILD
@@ -1,11 +1,9 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=kde-applications
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kclock
 pkgver=24.12.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Clock app for Plasma Mobile"
 url="https://invent.kde.org/utilities/kclock"
 # armhf blocked by qt6-qtdeclarative
@@ -35,7 +33,9 @@ makedepends="
 	"
 subpackages="$pkgname-lang"
 _repo_url="https://invent.kde.org/utilities/kclock.git"
-source="https://download.kde.org/stable/release-service/$pkgver/src/kclock-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kclock-$pkgver.tar.xz
+	0001-kclock-AlarmForm-create-duration-and-snooze-models-correctly.patch
+	"
 
 build() {
 	cmake -B build -G Ninja \
@@ -51,4 +51,5 @@ package() {
 
 sha512sums="
 5b50f6560095d9ec5e34577b2efb88af9c682cb78c439a534fb7e23dda35b83b78d3579fdb15d5349b3ed9d10d6098bfbee48d9e2f82b6ddb07f08e5025cb41d  kclock-24.12.3.tar.xz
+6c043dcbdb6cdf2a0d2640b935d8c060b3a736331af1b19f07bde0cf1c6697b6b4efe6fde901bb35a8e73c67047301726736c0a8648048647e93f8378857b30c  0001-kclock-AlarmForm-create-duration-and-snooze-models-correctly.patch
 "
