community/py3-docstring-to-markdown: upgrade to 0.16

--- a/community/py3-docstring-to-markdown/APKBUILD
+++ b/community/py3-docstring-to-markdown/APKBUILD
@@ -2,12 +2,13 @@
 # Maintainer: Galen Abell <galen@galenabell.com>
 pkgname=py3-docstring-to-markdown
 _pyname=docstring-to-markdown
-pkgver=0.15
-pkgrel=1
+pkgver=0.16
+pkgrel=0
 pkgdesc="On the fly conversion of Python docstrings to markdown"
 url="https://github.com/python-lsp/docstring-to-markdown"
 arch="noarch"
 license="LGPL-2.1-only"
+depends="py3-importlib-metadata py3-typing-extensions"
 makedepends="py3-gpep517 py3-setuptools py3-setuptools_scm py3-wheel"
 checkdepends="py3-pytest"
 subpackages="$pkgname-pyc"
@@ -31,5 +32,5 @@ package() {
 }
 
 sha512sums="
-100d84b6071609d774f2b3426804a32d88eb6e0a463d63003d8cee67f8e0ffb93dad54cfa2f18647dd5d1439459e4c217589c89737bc98e2ee2e11bb9f0871f6  docstring-to-markdown-0.15.tar.gz
+4052194a12525071558d859ef23fd33c1c131676f7931ff72891b951d2a7726c1b786639c00be2ff3578bff155cf77d22ddeb03d87dcd782baa337f456a8647f  docstring-to-markdown-0.16.tar.gz
 "
