community/libzim: upgrade to 9.2.3

--- a/community/libzim/APKBUILD
+++ b/community/libzim/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=libzim
-pkgver=9.1.0
-_testing_suite_ver=0.4
-pkgrel=2
+pkgver=9.2.3
+_testing_suite_ver=0.7.0
+pkgrel=0
 pkgdesc="Reference implementation of the ZIM file format"
 url="https://openzim.org/"
 arch="all"
@@ -24,7 +24,8 @@ checkdepends="
 	"
 subpackages="$pkgname-dev $pkgname-doc"
 source="$pkgname-$pkgver-2.tar.gz::https://github.com/openzim/libzim/archive/$pkgver.tar.gz
-	https://github.com/openzim/zim-testing-suite/releases/download/v$_testing_suite_ver/zim-testing-suite-$_testing_suite_ver.tar.gz
+	https://github.com/openzim/zim-testing-suite/releases/download/$_testing_suite_ver/zim-testing-suite-$_testing_suite_ver.tar.gz
+	icu-76.patch
 	"
 
 build() {
@@ -44,6 +45,7 @@ package() {
 }
 
 sha512sums="
-0f365024c31ee350972292979f729a82181ea94c708fae31118b71efa03cbf462ad1b879d9e314c4f28819ff40d73c3808d30d91c10e2af0aa8a81686ff82770  libzim-9.1.0-2.tar.gz
-be2143c5bfab0b247dfbfe3e5c2bb1b58d786e5802be4f4a62ce694e6467f7713c5ccc1e1d4a933227cfc07016fc9d6ae1249d2d3cb29237a28750922dc671cb  zim-testing-suite-0.4.tar.gz
+31b29a4727320ecf3a0d59b7bd7c8c5485ee29d5f028fbad53316edf53e35a239e6f7f45e2a99bcddadda22846823b89dfdfc1b805542f3fbd1180065a227744  libzim-9.2.3-2.tar.gz
+cdb96967c9d303cd3ddf0d7bf04889684f870c9e36ab7a6e38bdd82b8b685331eaa0348aa0496898d7c9444fcdc0d435eda421a446bb0a14982997833db57247  zim-testing-suite-0.7.0.tar.gz
+e18f74d973a6312b80caae2336de9d0e20d11d0d18708e91c9a6dd74064aa530b1501267b622eeb06954ad9f4fa2658d3c180a40124d60921c5c285e927930ed  icu-76.patch
 "
