community/xautolock: minor fixes

--- a/community/xautolock/APKBUILD
+++ b/community/xautolock/APKBUILD
@@ -2,16 +2,16 @@
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=xautolock
 pkgver=2.2
-pkgrel=7
+pkgrel=8
 pkgdesc="An automatic X screen-locker/screen-saver"
 url="https://www.ibiblio.org/pub/linux/X11/screensavers/"
 arch="all"
-license="GPL-2.0"
-depends_dev="imake xorg-server-dev libxscrnsaver-dev xorg-cf-files"
-makedepends="$depends_dev"
+license="GPL-2.0-only"
+makedepends="imake xorg-server-dev libxscrnsaver-dev xorg-cf-files"
 subpackages="$pkgname-doc"
 source="https://www.ibiblio.org/pub/linux/X11/screensavers/xautolock-$pkgver.tgz
 	processwait.patch"
+options="!check" # No tests
 
 build() {
 	xmkmf
@@ -19,8 +19,7 @@ build() {
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
-	make MANPATH=/usr/share/man DESTDIR="$pkgdir" install.man
+	make MANPATH=/usr/share/man DESTDIR="$pkgdir" install install.man
 }
 
 sha512sums="5f9dcc25cda706610e77a74235c4b421ca3a833d154b1a269057f0774579e1c6ec36fe0e5be5fadd6942ce8c1640a760f891397586b162e6024b524635153d04  xautolock-2.2.tgz
