community/py3-leap_ec: upgrade to 0.8.2

--- a/community/py3-leap_ec/APKBUILD
+++ b/community/py3-leap_ec/APKBUILD
@@ -1,10 +1,10 @@
 # Contributor: Iztok Fister, Jr. <iztok@iztok-jr-fister.eu>
 # Maintainer: Iztok Fister, Jr. <iztok@iztok-jr-fister.eu>
 pkgname=py3-leap_ec
-pkgver=0.8.1
-pkgrel=1
+pkgver=0.8.2
+pkgrel=0
 pkgdesc="A general purpose Library for Evolutionary Algorithms in Python"
-url="https://github.com/AureumChaos/LEAP"
+url="https://github.com/leap-ec/LEAP"
 arch="noarch"
 license="AFL-3.0"
 depends="
@@ -20,10 +20,10 @@ depends="
 	py3-scipy
 	py3-toolz
 	"
-makedepends="py3-gpep517 py3-setuptools py3-wheel"
+makedepends="py3-gpep517 py3-hatchling py3-wheel"
 checkdepends="py3-pytest py3-pytest-cov"
 subpackages="$pkgname-pyc"
-source="https://github.com/AureumChaos/LEAP/archive/$pkgver/LEAP-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/leap-ec/LEAP/archive/v$pkgver/$pkgver.tar.gz"
 builddir="$srcdir/LEAP-$pkgver"
 options="!check" # missing dependencies | skip for now
 
@@ -45,5 +45,5 @@ package() {
 }
 
 sha512sums="
-6d3818f6792acbcad1dfaeb2d85db5924708277c4aadb5ccb6c12fa4b85c37555a133cb32f790c101b0c4addab9ae51d445c636441e6da40278e2db8e2c38d3a  LEAP-0.8.1.tar.gz
+a3c875bca98996b07a3a3473cda6748da3cd64a7f9e034a06c21eb2baefd4236c59a2d7f7e851f0c05b236984f7e2a70ef78458caff3aea5e58d2f526474b62b  py3-leap_ec-0.8.2.tar.gz
 "
