--- a/community/ibus-anthy/APKBUILD
+++ b/community/ibus-anthy/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.5.17
 pkgrel=0
 pkgdesc="Japanese input method Anthy IMEngine for IBus Framework"
 url="https://github.com/ibus/ibus-anthy"
-arch="all !s390x" # ibus needs librsvg which isn't available on s390x
+arch="all"
 license="GPL-2.0-only"
 depends="
 	ibus
