community/py3-tcxparser: upgrade to 2.4.0

--- a/community/py3-tcxparser/APKBUILD
+++ b/community/py3-tcxparser/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Iztok Fister, Jr. <iztok@iztok-jr-fister.eu>
 pkgname=py3-tcxparser
 _pkgorig=python-tcxparser
-pkgver=2.3.0
-pkgrel=5
+pkgver=2.4.0
+pkgrel=0
 pkgdesc="Simple parser for Garmin TCX files"
 url="https://github.com/vkurup/python-tcxparser"
 arch="noarch"
@@ -12,7 +12,7 @@ depends="python3 py3-lxml py3-dateutil"
 makedepends="py3-gpep517 py3-setuptools py3-wheel"
 checkdepends="py3-pytest-xdist"
 subpackages="$pkgname-pyc"
-source="https://github.com/vkurup/python-tcxparser/archive/$pkgver/$_pkgorig-$pkgver.tar.gz"
+source="https://github.com/vkurup/python-tcxparser/archive/$pkgver/$_pkgorig-$pkgver-r1.tar.gz"
 builddir="$srcdir/$_pkgorig-$pkgver"
 
 build() {
@@ -33,5 +33,5 @@ package() {
 }
 
 sha512sums="
-6a145ee69f5398683e15216bcee61bac431aeb03dd3b4e09be075e0543b6b5afdb028757918e73da70d514de727b1c7895496da35f9ee47a7fce371d7397f648  python-tcxparser-2.3.0.tar.gz
+b5921a2987aedf20165600db541f60f21f221493047206e0bffb5ffe97c7c4ce4471efdf7d9e35993c4ca2ac7ad280f3a357a9a1e10f9089781fca4357147b94  python-tcxparser-2.4.0-r1.tar.gz
 "
