testing/mdbook-katex: upgrade to 0.9.3

--- a/testing/mdbook-katex/APKBUILD
+++ b/testing/mdbook-katex/APKBUILD
@@ -1,11 +1,10 @@
 # Maintainer: Cowington Post <cowingtonpost@gmail.com>
 pkgname=mdbook-katex
-pkgver=0.9.2
+pkgver=0.9.3
 pkgrel=0
 pkgdesc="Preprocessor for mdbook to render LaTeX equations in HTML"
 url="https://github.com/lzanini/mdbook-katex"
-# loongarch64: blocked by libc crate
-arch="all !loongarch64"
+arch="all"
 license="MIT"
 depends="mdbook"
 makedepends="
@@ -30,5 +29,5 @@ package() {
 }
 
 sha512sums="
-beae5b0cda9075aa23c8d19ac8ca894d961a2cffc3ccee06f55b91bb31539e70d05abb5f54b623b1f0520bac9bda5f3d4057dabf889a5bb3013c0b64254c45de  mdbook-katex-0.9.2.tar.gz
+aaebc4dddc3c31cd3ec49e84a4cd6c18d6f1e4982490fec37122538ef165a6a1fbc4a10c584aeae28bd87dccbb19fdf6a5a6e09b2bab0040138bdea72405399a  mdbook-katex-0.9.3.tar.gz
 "
