testing/ghostty: disable aarch64 due to build failure

--- a/testing/ghostty/APKBUILD
+++ b/testing/ghostty/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.1.2_git20250320
 pkgrel=1
 pkgdesc="Fast, feature-rich, and cross-platform terminal emulator"
 url="https://ghostty.org/"
-arch="aarch64 x86_64"	# zig
+arch="x86_64"	# zig. fails to build on aarch64
 license="MIT"
 depends_dev="
 	fontconfig-dev
