community/phosh: upgrade to 0.46.0
https://gitlab.gnome.org/World/Phosh/phosh/-/blob/v0.46.0/NEWS

--- a/community/phosh/APKBUILD
+++ b/community/phosh/APKBUILD
@@ -4,8 +4,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: team/phosh <newbyte@postmarketos.org>
 pkgname=phosh
-pkgver=0.45.0
-pkgrel=1
+pkgver=0.46.0
+pkgrel=0
 pkgdesc="Wayland shell for GNOME on mobile devices"
 # armhf: blocked by gnome-shell-schemas
 arch="all !armhf"
@@ -110,13 +110,12 @@ portalsconf() {
 }
 
 libphosh_dev() {
-	local _soname="libphosh-$(echo $pkgver | sed -E 's/^([0-9]+)\.([0-9]+).*/\1.\2/')"
-	amove usr/include/$_soname
-	amove usr/lib/$_soname.so
-	amove usr/lib/pkgconfig/$_soname.pc
+	amove usr/include/libphosh-*
+	amove usr/lib/libphosh-*.so
+	amove usr/lib/pkgconfig/libphosh-*.pc
 }
 
 sha512sums="
-bb9ae902c979d410c8ab85ed04c1bdb7f99d77a0e7fe84c31485e8e9c8fdc49cc5475921b8e5839a73db9d615df5c17114149fd06642d6b37fa3fd08d8ebf1bf  phosh-0.45.0.tar.xz
+ff6c9d95f4a09d75f0f7ae667a06b0424a1a4266177227195981326da7967e337cf9de1b686febcb66b5776ffcec293ef6c6d899e0d7955b2e8b871d93e2db8c  phosh-0.46.0.tar.xz
 8ca4893a751311de326e198314669f5a276092ade99c6353c4c9ce070713fb1a5b1615e7fecb93b428dc79fd4001a9af43d24eafaf2545d7db464963fda25330  phosh.desktop
 "
