community/phosh-mobile-settings: upgrade to 0.46.0
https://gitlab.gnome.org/World/Phosh/phosh-mobile-settings/-/blob/v0.46.0/NEWS

--- a/community/phosh-mobile-settings/APKBUILD
+++ b/community/phosh-mobile-settings/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Newbyte <newbie13xd@gmail.com>
 # Maintainer: team/phosh <newbie13xd@gmail.com>
 pkgname=phosh-mobile-settings
-pkgver=0.45.0
-pkgrel=1
+pkgver=0.46.0
+pkgrel=0
 pkgdesc="Settings app for mobile specific things"
 url="https://gitlab.gnome.org/World/Phosh/phosh-mobile-settings"
 # blocked by phosh
@@ -10,6 +10,7 @@ arch="all !armhf"
 license="GPL-3.0-or-later"
 makedepends="
 	desktop-file-utils
+	feedbackd-dev
 	glib-dev>=2.62
 	gmobile-dev
 	gnome-desktop-dev
@@ -17,6 +18,7 @@ makedepends="
 	gtk4.0-dev
 	json-glib-dev
 	libadwaita-dev
+	libportal-dev
 	lm-sensors-dev
 	meson
 	phosh-dev
@@ -41,5 +43,5 @@ package() {
 }
 
 sha512sums="
-6311a1ad2c0df058e818aa1d77ea85bdd6fed1ebf13058369bf05bece299ca13e7e1cca29af7f491fcc1e47702cab40e46c641d0641b1be08e694c84f5afd1ee  phosh-mobile-settings-0.45.0.tar.xz
+7bb1414d55fb2dee24c303cc43405bb0d518570e96b94e242c920a8fc17be1f630f6ff735e4b37bca9a841742085e37d7a193550d074f52a435c53c25b2c44e0  phosh-mobile-settings-0.46.0.tar.xz
 "
