--- a/community/vips/APKBUILD
+++ b/community/vips/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Will Jordan <will.jordan@gmail.com>
-maintainer="Will Jordan <will.jordan@gmail.com>"
+maintainer="Lovell Fuller <aports@lovell.info>"
 pkgname=vips
 pkgver=8.15.3
-pkgrel=5
+pkgrel=6
 pkgdesc="fast image processing library with low memory needs"
 url="https://libvips.github.io/libvips/"
 arch="all"
