main/raspberrypi-bootloader: take over maintainership

--- a/main/raspberrypi-bootloader/APKBUILD
+++ b/main/raspberrypi-bootloader/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Marian Buschsieweke <marian.buschsieweke@posteo.net>
-# Maintainer: Timo Teräs <timo.teras@iki.fi>
+# Maintainer: macmpi <spam@ipik.org>
 pkgname=raspberrypi-bootloader
 # To match Alpine kernel schedule, use master branch commit id rather than older stable tagged releases
 # Keep by-the-date release numbering for consistency
 # To avoid unnecessary pkg bumps & update just pick commit of latest *.dat, *.elf, bootcode.bin files changes
 _commit=b4b8d674397314f48a6dc3e647cfd4464a4c1105
 pkgver=1.20250319
-pkgrel=0
+pkgrel=1
 pkgdesc="Bootloader files for the Raspberry Pi"
 url="https://github.com/raspberrypi/rpi-firmware"
 arch="armhf armv7 aarch64"
