community/lpac: enable MBIM backend
Should be useful for some USB or PCI-attached modems.

--- a/community/lpac/APKBUILD
+++ b/community/lpac/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Luca Weiss <luca@lucaweiss.eu>
 pkgname=lpac
 pkgver=2.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="C-based eUICC LPA"
 url="https://github.com/estkme-group/lpac"
 # x86: textrels
@@ -11,6 +11,7 @@ license="AGPL-3.0-only AND LGPL-2.0-only AND MIT"
 makedepends="
 	cmake
 	curl-dev
+	libmbim-dev
 	libqmi-dev
 	pcsc-lite-dev
 	samurai
@@ -29,6 +30,7 @@ build() {
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_RPATH=/usr/lib/lpac \
 		-DLPAC_WITH_APDU_AT=ON \
+		-DLPAC_WITH_APDU_MBIM=ON \
 		-DLPAC_WITH_APDU_PCSC=ON \
 		-DLPAC_WITH_APDU_QMI=ON \
 		-DLPAC_WITH_APDU_QMI_QRTR=ON
