--- a/community/drawpile/APKBUILD
+++ b/community/drawpile/APKBUILD
@@ -1,31 +1,36 @@
-# Contributor: mio <miyopan@e.email>
 # Maintainer: mio <miyopan@e.email>
+maintainer="mio <miyopan@e.email>"
 pkgname=drawpile
-pkgver=2.2.1
-pkgrel=1
+pkgver=2.2.2
+pkgrel=0
 pkgdesc="Collaborative drawing program"
 url="https://drawpile.net/"
 license="GPL-3.0-or-later"
 # armhf: missing karchive5-dev kdnssd5-dev
-# ppc64le: unrecognized command-line option '-march=native' error
-# x86, armv7: cast from pointer to integer of different size error
-arch="aarch64 x86_64"
+# armv7, riscv64: multiple -Wcast-align errors
+arch="all !armhf !armv7 !riscv64"
 pkgusers=drawpile
 pkggroups=drawpile
+# Dependencies to enable additional features:
+# ffmpeg-dev: libav image scaling and video export
+# qt5-qtwebsockets: websockets support
 makedepends="
 	cargo
 	cmake
 	extra-cmake-modules
+	ffmpeg-dev
 	giflib-dev
 	karchive5-dev
 	kdnssd5-dev
 	libmicrohttpd-dev
 	libsodium-dev
 	libvpx-dev
+	libwebp-dev
 	miniupnpc-dev
 	qt5-qtmultimedia-dev
 	qt5-qtsvg-dev
 	qt5-qttools-dev
+	qt5-qtwebsockets-dev
 	qt5-qtx11extras-dev
 	samurai
 	"
@@ -40,9 +45,11 @@ subpackages="
 source="drawpile-$pkgver.tar.gz::https://github.com/drawpile/Drawpile/archive/$pkgver.tar.gz
 	drawpile.initd
 	drawpile-server.pre-install
+	cmake-detect-arch.patch
+	fix-cast-32-bit.patch
 	"
 builddir="$srcdir"/Drawpile-"$pkgver"
-options="net"
+options="net" # rust crates
 
 # Temporarily disable lto due to conflict with multiple Rust libs exposing
 # rust_eh_personality symbol.
@@ -112,7 +119,9 @@ tools() {
 }
 
 sha512sums="
-7480d10dd0ac6ea280b8abced66d7c1daca03e2a7dcb1e8c3378efb18a0a6ab5f72734619956c76827adbbf7969a3a930dd2dff951dcbbf7ff6d703e5a665e9e  drawpile-2.2.1.tar.gz
+e17f80e9ce0ffd3f5d8b12a596d71859bce88544b8792819b1576eb3caad61e2845e7e7ed4cf5e76b5ddb35e5ee32c07a46720be96a5b270f896145f19fb870f  drawpile-2.2.2.tar.gz
 5a2e6d1e677a74a43838cce26bd6b6f6bceb858f3622912476665ad3f6cef3171aa0c5b56ca9343c5b7ec81c850ce251a177d77490854e7ef39796c4c7d53535  drawpile.initd
 712df7a0bac0d4ad25f4254f0caf09b4d496b64d1d0a8bbbdd28e3b6c10ac6305dab58ac48adc8b88d0b7c8898ce28613ae2e8951ba76ad2ef5da35b3d943a94  drawpile-server.pre-install
+c8211a7523b39a43d8f2994aea0f0517a6d9b8fcb1249fcc9acaadf7035c59efb3ade4eab6065267b827a17c6c4bf4e8324d07807e591e408ca0a270108f7183  cmake-detect-arch.patch
+032d71a5028a62275e5bf3822ef755071cc36aa06b1253f79d941f6f86d75499068f0bd26f1b02955ffbbe0c0fa204a4c8076d5f7e07a1d55dcea51d74f35059  fix-cast-32-bit.patch
 "
