testing/sc-controller: upgrade to 0.5.1

--- a/testing/sc-controller/APKBUILD
+++ b/testing/sc-controller/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Joshua Murphy <joshuamurphy@posteo.net>
 maintainer="Joshua Murphy <joshuamurphy@posteo.net>"
 pkgname=sc-controller
-pkgver=0.5.0
+pkgver=0.5.1
 pkgrel=0
 pkgdesc="User-mode driver and GTK3 based GUI for the Steam Controller"
 url="https://github.com/C0rn3j/sc-controller"
@@ -25,6 +25,7 @@ makedepends="
 	linux-headers
 	py3-gpep517
 	py3-setuptools
+	py3-setuptools_scm
 	py3-wheel
 	python3-dev
 	zlib-dev
@@ -34,6 +35,7 @@ subpackages="$pkgname-pyc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/C0rn3j/sc-controller/archive/v$pkgver.tar.gz"
 
 build() {
+	export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
 	gpep517 build-wheel \
 		--wheel-dir .dist \
 		--output-fd 3 3>&1 >&2
@@ -51,5 +53,5 @@ package() {
 }
 
 sha512sums="
-e857862427434514f08cd5d3aec303b026688d6c5a94cc654fc25a423dab705f7284216d270a07a549d1dc67ffe6d14873eb6fd028f91fd071369e9900911a2b  sc-controller-0.5.0.tar.gz
+069dd1acfa9f81c0117005443ae2d865da255c6da8f6ab10f4c53e3dab3cf8fda3fcd77b8d7292d9f3b38edffdc91af834dac6cd3557f155ceba19b1ad47f065  sc-controller-0.5.1.tar.gz
 "
