--- a/testing/cemu/APKBUILD
+++ b/testing/cemu/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Joshua Murphy <joshuamurphy@posteo.net>
 maintainer="Joshua Murphy <joshuamurphy@posteo.net>"
 pkgname=cemu
-pkgver=2.4
-pkgrel=1
+pkgver=2.5
+pkgrel=0
 _cubeb=2071354a69aca7ed6df3b4222e305746c2113f60
 _imgui=f65bcf481ab34cd07d3909aab1479f409fa79f2f
 pkgdesc="Wii U Emulator"
@@ -10,6 +10,7 @@ url="https://cemu.info"
 arch="x86_64"
 license="MPL-2.0"
 makedepends="
+	bluez-dev
 	boost-dev
 	clang
 	cmake
@@ -98,7 +99,7 @@ lang() {
 }
 
 sha512sums="
-3de11985a4ad786317152da01e1132a5758724c25898d70d4003b12b37528e1d5aaa61758365a76c1fc8be1dd58e63b144b58aa75da7ed05d8a66514303d6f12  cemu-2.4.tar.gz
+792367cad58ddda78cf003bccf1a8c6e7837009106715e028b43ce0ed842b0562a0ebcec898c7a6502eae91fafa44637a6e0f9bb7f70240750f944c43c9f5399  cemu-2.5.tar.gz
 64a25d58f6a842947ac8ee1125574fc6a34b261e97a11a9fcdf27cccaf35dad49f12f3f2d8abb1e057932059629c3e568421cf2c09b064d76de21c1a8d8542a3  cubeb-2071354a69aca7ed6df3b4222e305746c2113f60.tar.gz
 6e5bbede4435bd7248ae426eed519d702c5770ac211d2cf18c4b9f9fa7e83b901e4f80662c0f39e1d688bc3eaf674dd21c9d3e42e7324e5ab9bc16af67c13429  imgui-f65bcf481ab34cd07d3909aab1479f409fa79f2f.tar.gz
 79d1fd6c733094a50e11622ec611cd06ca609bb088210ba00534f846209dc7f1f09f8308ba0c04f60b37871218155dd1865df290ecffdc4275d6c5c703da6e6a  cmake-fixes.patch
