community/grpc: upgrade to grpc 1.71.0

--- a/community/grpc/APKBUILD
+++ b/community/grpc/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: wener <wenermail@gmail.com>
 # Maintainer: wener <wenermail@gmail.com>
 pkgname=grpc
-pkgver=1.62.1
-pkgrel=2
+pkgver=1.71.0
+pkgrel=0
 pkgdesc="The C based gRPC"
 url="https://grpc.io/"
 arch="all"
@@ -66,19 +66,17 @@ subpackages="
 	libupb_message_lib:lib
 	libupb_textformat_lib:lib
 	"
-_googletest_rev=0e402173c97aea7a00749e825b194bfede4f2e45
+_googletest_rev=52204f78f94d7512df1f0f3bea1d47437a2c3a58
 
 # ruby-dont-strip-library.patch: abuild will dot the strip
 source="https://github.com/grpc/grpc/archive/v$pkgver/grpc-v$pkgver.tar.gz
 	googletest-$_googletest_rev.tar.gz::https://github.com/google/googletest/archive/$_googletest_rev.tar.gz
 	01-chttp2-maybe-uninitialized.patch
+	disable-sse2-on-arm.patch
 	find-dependency.patch
 	ruby-fix-protoc-path.patch
 	ruby-use-shared-libs.patch
 	ruby-use-system-certs.patch
-	makefile-use-system-abseil.patch
-	cython3.patch
-	gcc14.patch
 	"
 options="net !check" # sometimes hang indefinitely on builders
 
@@ -270,14 +268,12 @@ lib() {
 }
 
 sha512sums="
-3224ad2617c18156f90c54c1ebf1f2015e405a6f12546e8709e0c905f52508c9f1a13b4d5a6cc7a35abf58b429985b5b504c9062f50c0d3d6aa163180a61047a  grpc-v1.62.1.tar.gz
-5c5eaf6ff9f3c1bca025b7ef0234ba97232ba85b43e6354a92f49b7208f5c47581ebaf18bf58618498e5d264f2620c2b6676e81bb0f7df77112b96ba271ececf  googletest-0e402173c97aea7a00749e825b194bfede4f2e45.tar.gz
-7fa146ce86ddd4f160bb1ca9ff01cb7aca6b2b8c9aa50e4fa6b84504b9117b104be0d1e31ccb452d846549dfe1e9012ceccfcdc1f2357ed567621d71fb8b08c5  01-chttp2-maybe-uninitialized.patch
+25783f75295919d0a077e3d0ff70ea2e651eaf107da2ebe8af40a584540f2f56aae0e04c7b809f3b1eb7d5adc3892f84464662d80b1234a111836f454ba84a18  grpc-v1.71.0.tar.gz
+a24d71b1f0a4a54e98da9b1fab80a4402f0dff508bc901bf75976ccc3fbe9fb4a022e5be91b96619bec27ddfb047ff44ff4b5b1c42bb7c79e2b1c48c18fd7436  googletest-52204f78f94d7512df1f0f3bea1d47437a2c3a58.tar.gz
+b22c054cd826e1e5d5c4f985e34747afc46ebb35cef6351816f9bd7a049664f91af0f661686b809a98ef01a91b92ce96473aea1170e6f657338feaa36aaf7a63  01-chttp2-maybe-uninitialized.patch
+36cad27e8d4aa8df7f6b7774c1f9b14eb2bd8f0263cc58f24300fcf853e0028d719bff7952b03cd8d3bc082df09388453865abb3d2e14c89c193f44d34166254  disable-sse2-on-arm.patch
 6702e39c6a3c065fe4ff5ae48898057135c09bf6851e35fc958cf95ee5d77e9dd34e8c34d978efe60682384e46c4c4b2e51156d546b06a0eb1feed89adcc024b  find-dependency.patch
-4ea72d2acd8bee9c9022a4412aa0af0477faca7b0810d14decb3ad5d4da044247f51189512323bfee855b9b260a7f82b812310391451e5d8ee718297800d7a73  ruby-fix-protoc-path.patch
-68af4751ff99e98f9e794ba01e2ec64b2f91c326a8db785be1126472cd1f1771908e38615c7ddd16d1d475ac399e07dab8962c6e921b27cd4c4257ee9236ad74  ruby-use-shared-libs.patch
+74783969f567c82d3f2def4a7abebd25fd31709b432dba2d74cc6665fc4d312e129d6098bf060e961f08d2440125a7a93e82483861ed1164edc4371463cb4012  ruby-fix-protoc-path.patch
+55a7592367d2008964a5350a546ebc704933e71b9c8046c6c5ca6c7edaeb427226700d6f19360c6ceced2f963357d259ffb523d106f115bf8bc8e63c3d9a3486  ruby-use-shared-libs.patch
 631af4b9ac29c1ebabb2c88394ea2993e36cec1beda38195e1587dbd9d3c8c9eef75a17d2326d3cd2e682de551401216075ba08fdc501c098b8092d718ded381  ruby-use-system-certs.patch
-89e260934da83eb45fa6b73884cba1b1c30f99c0eb883a726e2d36ee4788246f4c6fa1b201077038af956bcb58e625f83bedba4f186c711785ec240373ce4fc5  makefile-use-system-abseil.patch
-896d2771fbb726db97efc7a76687a8fddfae18b0492977fc1f7cec4002803f7aed29e8276c94c6b60a06ecfe3ee7795d4ec3f8f90031dd3eda32d3e23dc9c98c  cython3.patch
-8175c638da57c0f79381aeafbdc84e08f92b89a5ab266d02c34bcc7a23820b95f306ca41ce3a04b47da2fb19aa7225145a111965da2fb03993d62045c13e5d7f  gcc14.patch
 "
